[package]
name = "mdlinker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.72", features = ["backtrace"] }
clap = { version = "4.3.19", features = ["derive", "env"] }
comrak = "0.18.0"
env_logger = "0.10.0"
glob = "0.3.1"
itertools = "0.11.0"
log = "0.4.19"
rand = "0.8.5"
serde = { version = "1.0.180", features = ["serde_derive"] }
serde_yaml = "0.9.25"
thiserror = "1.0.56"
